== Version 2.5.22 Work in progress (not released -- this is a draft) ==

== Version 2.5.21 ==

  Users side :
  ------------
    # The command "creme_populate" now returns a correct error code if an error happened.
      It's a backport from Creme 2.6
    # An loading issue (with the lib 'cryptography'), which caused crash at
      start-up in some environments, has been fixed.
    # The 'populate' scripts could failed on menu configuration in some cases.
    # There was issue when a FileRef is creating when a CremeModel is deleted:
      the path could be too long to be stored by the FileRef, which caused an error.


== Version 2.5.20 ==

  Users side :
  ------------
    # The render of history lines on TextFields (like "description") with line breaks has been improved.
    # Apps :
        * Opportunities :
            - Unsetting the current Quote was not possible if you did not create the relationship yourself.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The creation forms for HeaderFilter & EntityFilter now accept models with digits at the end of their name.
        # Apps :
            * Billing :
                - The Relation cache is now used in 'Line.related_document'.
                - The handler 'signals.manage_line_deletion()' now avoid to re-compte the totals when its the whole entity (e.g. Invoice) which is being deleted.
                  It's faster & it avoids some inconsistent states where the entity has no emitter/receiver in its 'save() too.


== Version 2.5.19 ==

  Users side :
  ------------
    # A content visibility issue on popover opening has been fixed.
    # Apps :
        * Creme_config :
            - When you emptied your bricks configuration for "My page" (default or owned)
              with the form, the configuration displayed a ugly "BLOCK" line.
              When you tried to edit this configuration, the form did not propose any choice.

  Developers side :